...
        <IconButton
          name={Icon.Sparkles}
          size={Size.iconSm}
          variant="clear"
          onPress={onNotificationsPress}
          accessibilityRole="button"
          accessibilityLabel="View Notifications"
          iconColor={theme.text}
        />
        {notificationCount > 0 ? (
          <View style={[styles.badge, { backgroundColor: theme.error }]} />
        ) : null}
      </View>
...
